--- a/.htaccess
+++ b/.htaccess
@@ -26,5 +26,5 @@
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+    RewriteRule ^ developer-dashboard.smallsmall.com/index.php [L]
 </IfModule>
