--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,13 @@
 <IfModule mod_rewrite.c>
+    # That was ONLY to protect you from 500 errors
+    # if your server did not have mod_rewrite enabled
+    
     RewriteEngine On
-    RewriteBase /
-    RewriteRule ^index\.php$ - [L]
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule . /index.php [L]
+    # RewriteBase /
+    # NOT needed unless you're using mod_alias to redirect
+    
+    RewriteCond %{REQUEST_URI} !/public
+    RewriteRule ^(.*)$ public/$1 [L]
+    # Direct all requests to /public folder
+    
     </IfModule>
