--- a/.env
+++ b/.env
@@ -18,9 +18,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=
 DB_PORT=3306
-DB_DATABASE=stayonen_developer
-DB_USERNAME=stayonen_developer
-DB_PASSWORD=Passw0rd..1234
+DB_DATABASE=rentsmallsmall_furnisure_buytolet_database
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
