insert new property

--- a/.env
+++ b/.env
@@ -22,6 +22,13 @@ DB_DATABASE=rentsmallsmall_furnisure_buytolet_database
 DB_USERNAME=root
 DB_PASSWORD=
 
+DB_CONNECTION_SECOND=mysql
+DB_HOST_SECOND=
+DB_PORT_SECOND=3306
+DB_DATABASE_SECOND=fuelcredit
+DB_USERNAME_SECOND=root
+DB_PASSWORD_SECOND=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
